--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,38 +1,139 @@
-.App {
+
+body {
+  background: #ddd;
+}
+
+.page-header {
+  background: #00bcd4;
+  margin: 0;
+}
+
+.profile-head {
+  height: 500px;
+  width: 100%;
+  background-color: #00bcd4;
+  float: left;
+  position: relative;
+}
+
+.profile-head img {
+  margin: 0 auto;
+  border-radius: 5px;
+  max-width: 100%;
+  width: 100%;
+}
+
+.profile-head h5 {
+  width: 100%;
+  padding: 5px 5px 0px 5px;
+  text-align: justify;
+  font-weight: bold;
+  color: #555;
+  font-size: 25px;
+  text-transform: capitalize;
+  margin-bottom: 0;
+}
+
+.profile-head p {
+  width: 100%;
+  text-align: justify;
+  padding: 0px 5px 5px 5px;
+  color: #555;
+  font-size: 17px;
+  text-transform: capitalize;
+  margin: 0;
+}
+
+.profile-head a {
+  width: 100%;
   text-align: center;
+  padding: 10px 5px;
+  color: #555;
+  font-size: 15px;
+  text-transform: capitalize;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.profile-head ul {
+  list-style: none;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.profile-head ul li {
+  display: block;
+  color: #555;
+  padding: 5px;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.profile-head ul li:hover span {
+  color: rgb(0, 4, 51);
+}
+
+.profile-head ul li span {
+  color: #555;
+  padding-right: 10px;
+}
+
+.profile-head ul li a {
+  color: #555;
+}
+
+.profile-head h6 {
+  width: 100%;
+  text-align: center;
+  font-weight: 100;
+  color: #555;
+  font-size: 15px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+.profiles {
+  top: 300px;
+}
+
+
+/*media query*/
+
+@media all and (max-width:768px) {
+  a.menu {
+    display: block !important;
+    margin: 9px 2px;
+    float: right;
+    color: rgba(255, 102, 0, 0.98);
+    border: 0px solid;
+    background: none;
+    font-size: 30px;
+    width: 27px;
+    position: relative;
+    cursor: pointer;
+  }
+  a.menu:hover,
+  a.menu:focus {
+    color: rgb(0, 4, 51);
+  }
+  .drop_menu1 {
+    display: block;
+    visibility: visible;
+    width: 250px;
+    height: 1000px;
+    padding: 5px 30px;
+    position: absolute;
+    right: 0 !important;
+    background-color: #ffffff !important;
+    transition: all ease 0.5s;
+    border-top: 0px solid;
+    cursor: pointer;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media all and (max-width:430px) {
+  .profile-head ul li {
+    font-size: 12px !important;
   }
-  to {
-    transform: rotate(360deg);
+  .bio-table>tbody>tr>td {
+    font-size: 13px;
   }
 }
+
